# neuroevolution_serpent

./: CMakeLists.txt  README.md  main.cpp
Engine/: Window.cpp  Window.h
Engine/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  ShadowMap.cpp  ShadowMap.h  SpotLight.cpp
Engine/Modeling/: Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
Engine/Utils/: CommonValues.cpp  CommonValues.h
Game/: Arena.cpp  Arena.h  Camera.cpp  Camera.h  Food.cpp  Food.h  GameValues.h  Snake.cpp  Snake.h
Models/snake/ground/: model.mtl
Shaders/: directional_shadow_map.frag  shader.frag  skybox.frag
kiwinn/: DNA.cpp  DNA.hpp  GeneticPool.cpp  GeneticPool.h  NeuralNetwork.cpp  NeuralNetwork.hpp  README.md  Stage.cpp  Stage.hpp  utils.cpp  utils.hpp
